Ass2/assignment2/initial/target/main/mc/parser/MCParser.py
# Generated from main/mc/parser/MC.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class MCParser ( Parser ):

    grammarFileName = "MC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'if'", "'else'", "'continue'", "'for'", 
                     "'while'", "'do'", "'break'", "'return'", "'true'", 
                     "'false'", "<INVALID>", "<INVALID>", "'('", "')'", 
                     "'{'", "'}'", "'['", "']'", "','", "';'", "'+'", "'-'", 
                     "'/'", "'*'", "'!'", "'!='", "'||'", "'<'", "'<='", 
                     "'='", "'%'", "'&&'", "'=='", "'>'", "'>='", "<INVALID>", 
                     "'int'", "'void'", "'boolean'", "'float'", "'string'" ]

    symbolicNames = [ "<INVALID>", "INTLIT", "Realit", "Booleanlit", "Stringlit", 
                      "IF", "ELSE", "CONTINUE", "FOR", "WHILE", "DO", "BREAK", 
                      "RETURN", "TRUE", "FALSE", "BLOCK_COMMENT", "LINE_COMMENT", 
                      "LB", "RB", "LP", "RP", "LQB", "RQB", "CM", "SEMI", 
                      "ADD", "SUB", "DIV", "MUL", "NOT", "NOTEQUAL", "OR", 
                      "LESS", "LESSEQUAL", "ASSIGN", "MODUL", "AND", "EQUAL", 
                      "GREATER", "GREATEREQUAL", "WS", "INTTYPE", "VOIDTYPE", 
                      "BOOLEANTYPE", "FLOATTYPE", "STRINGTYPE", "ID", "ILLEGAL_ESCAPE", 
                      "UNCLOSE_STRING", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_declares = 1
    RULE_declare = 2
    RULE_varDeclare = 3
    RULE_manyVariable = 4
    RULE_variable = 5
    RULE_id_single = 6
    RULE_id_array = 7
    RULE_funcDeclare = 8
    RULE_paraList = 9
    RULE_paraDecl = 10
    RULE_blockstmt = 11
    RULE_var_stmt = 12
    RULE_stmt = 13
    RULE_ifstmt = 14
    RULE_do_whilestmt = 15
    RULE_forstmt = 16
    RULE_breakstmt = 17
    RULE_continuestmt = 18
    RULE_returnstmt = 19
    RULE_mctype = 20
    RULE_exp = 21
    RULE_exp1 = 22
    RULE_exp2 = 23
    RULE_exp3 = 24
    RULE_exp4 = 25
    RULE_exp5 = 26
    RULE_exp6 = 27
    RULE_exp7 = 28
    RULE_exp8 = 29
    RULE_exp9 = 30
    RULE_operand = 31
    RULE_funcall = 32
    RULE_parameterList = 33
    RULE_parameter = 34
    RULE_primitivetype = 35
    RULE_arraypointertype = 36

    ruleNames =  [ "program", "declares", "declare", "varDeclare", "manyVariable", 
                   "variable", "id_single", "id_array", "funcDeclare", "paraList", 
                   "paraDecl", "blockstmt", "var_stmt", "stmt", "ifstmt", 
                   "do_whilestmt", "forstmt", "breakstmt", "continuestmt", 
                   "returnstmt", "mctype", "exp", "exp1", "exp2", "exp3", 
                   "exp4", "exp5", "exp6", "exp7", "exp8", "exp9", "operand", 
                   "funcall", "parameterList", "parameter", "primitivetype", 
                   "arraypointertype" ]

    EOF = Token.EOF
    INTLIT=1
    Realit=2
    Booleanlit=3
    Stringlit=4
    IF=5
    ELSE=6
    CONTINUE=7
    FOR=8
    WHILE=9
    DO=10
    BREAK=11
    RETURN=12
    TRUE=13
    FALSE=14
    BLOCK_COMMENT=15
    LINE_COMMENT=16
    LB=17
    RB=18
    LP=19
    RP=20
    LQB=21
    RQB=22
    CM=23
    SEMI=24
    ADD=25
    SUB=26
    DIV=27
    MUL=28
    NOT=29
    NOTEQUAL=30
    OR=31
    LESS=32
    LESSEQUAL=33
    ASSIGN=34
    MODUL=35
    AND=36
    EQUAL=37
    GREATER=38
    GREATEREQUAL=39
    WS=40
    INTTYPE=41
    VOIDTYPE=42
    BOOLEANTYPE=43
    FLOATTYPE=44
    STRINGTYPE=45
    ID=46
    ILLEGAL_ESCAPE=47
    UNCLOSE_STRING=48
    ERROR_CHAR=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declares(self):
            return self.getTypedRuleContext(MCParser.DeclaresContext,0)


        def EOF(self):
            return self.getToken(MCParser.EOF, 0)

        def getRuleIndex(self):
            return MCParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.declares()
            self.state = 75
            self.match(MCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaresContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.DeclareContext)
            else:
                return self.getTypedRuleContext(MCParser.DeclareContext,i)


        def getRuleIndex(self):
            return MCParser.RULE_declares

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclares" ):
                return visitor.visitDeclares(self)
            else:
                return visitor.visitChildren(self)




    def declares(self):

        localctx = MCParser.DeclaresContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declares)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 77
                self.declare()
                self.state = 80 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.INTTYPE) | (1 << MCParser.VOIDTYPE) | (1 << MCParser.BOOLEANTYPE) | (1 << MCParser.FLOATTYPE) | (1 << MCParser.STRINGTYPE))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDeclare(self):
            return self.getTypedRuleContext(MCParser.VarDeclareContext,0)


        def funcDeclare(self):
            return self.getTypedRuleContext(MCParser.FuncDeclareContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclare" ):
                return visitor.visitDeclare(self)
            else:
                return visitor.visitChildren(self)




    def declare(self):

        localctx = MCParser.DeclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declare)
        try:
            self.state = 84
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.varDeclare()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.funcDeclare()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitivetype(self):
            return self.getTypedRuleContext(MCParser.PrimitivetypeContext,0)


        def manyVariable(self):
            return self.getTypedRuleContext(MCParser.ManyVariableContext,0)


        def SEMI(self):
            return self.getToken(MCParser.SEMI, 0)

        def getRuleIndex(self):
            return MCParser.RULE_varDeclare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclare" ):
                return visitor.visitVarDeclare(self)
            else:
                return visitor.visitChildren(self)




    def varDeclare(self):

        localctx = MCParser.VarDeclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varDeclare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.primitivetype()
            self.state = 87
            self.manyVariable()
            self.state = 88
            self.match(MCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ManyVariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.VariableContext)
            else:
                return self.getTypedRuleContext(MCParser.VariableContext,i)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.CM)
            else:
                return self.getToken(MCParser.CM, i)

        def getRuleIndex(self):
            return MCParser.RULE_manyVariable

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitManyVariable" ):
                return visitor.visitManyVariable(self)
            else:
                return visitor.visitChildren(self)




    def manyVariable(self):

        localctx = MCParser.ManyVariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_manyVariable)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.variable()
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MCParser.CM:
                self.state = 91
                self.match(MCParser.CM)
                self.state = 92
                self.variable()
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_single(self):
            return self.getTypedRuleContext(MCParser.Id_singleContext,0)


        def id_array(self):
            return self.getTypedRuleContext(MCParser.Id_arrayContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_variable

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable" ):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)




    def variable(self):

        localctx = MCParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_variable)
        try:
            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.id_single()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.id_array()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_singleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def getRuleIndex(self):
            return MCParser.RULE_id_single

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId_single" ):
                return visitor.visitId_single(self)
            else:
                return visitor.visitChildren(self)




    def id_single(self):

        localctx = MCParser.Id_singleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_id_single)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(MCParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_arrayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LQB(self):
            return self.getToken(MCParser.LQB, 0)

        def INTLIT(self):
            return self.getToken(MCParser.INTLIT, 0)

        def RQB(self):
            return self.getToken(MCParser.RQB, 0)

        def getRuleIndex(self):
            return MCParser.RULE_id_array

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId_array" ):
                return visitor.visitId_array(self)
            else:
                return visitor.visitChildren(self)




    def id_array(self):

        localctx = MCParser.Id_arrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_id_array)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(MCParser.ID)
            self.state = 105
            self.match(MCParser.LQB)
            self.state = 106
            self.match(MCParser.INTLIT)
            self.state = 107
            self.match(MCParser.RQB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDeclareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mctype(self):
            return self.getTypedRuleContext(MCParser.MctypeContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LB(self):
            return self.getToken(MCParser.LB, 0)

        def RB(self):
            return self.getToken(MCParser.RB, 0)

        def blockstmt(self):
            return self.getTypedRuleContext(MCParser.BlockstmtContext,0)


        def paraList(self):
            return self.getTypedRuleContext(MCParser.ParaListContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_funcDeclare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDeclare" ):
                return visitor.visitFuncDeclare(self)
            else:
                return visitor.visitChildren(self)




    def funcDeclare(self):

        localctx = MCParser.FuncDeclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_funcDeclare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.mctype()
            self.state = 110
            self.match(MCParser.ID)
            self.state = 111
            self.match(MCParser.LB)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.INTTYPE) | (1 << MCParser.BOOLEANTYPE) | (1 << MCParser.FLOATTYPE) | (1 << MCParser.STRINGTYPE))) != 0):
                self.state = 112
                self.paraList()


            self.state = 115
            self.match(MCParser.RB)
            self.state = 116
            self.blockstmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParaListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paraDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.ParaDeclContext)
            else:
                return self.getTypedRuleContext(MCParser.ParaDeclContext,i)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.CM)
            else:
                return self.getToken(MCParser.CM, i)

        def getRuleIndex(self):
            return MCParser.RULE_paraList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParaList" ):
                return visitor.visitParaList(self)
            else:
                return visitor.visitChildren(self)




    def paraList(self):

        localctx = MCParser.ParaListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_paraList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.paraDecl()
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MCParser.CM:
                self.state = 119
                self.match(MCParser.CM)
                self.state = 120
                self.paraDecl()
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParaDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitivetype(self):
            return self.getTypedRuleContext(MCParser.PrimitivetypeContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LQB(self):
            return self.getToken(MCParser.LQB, 0)

        def RQB(self):
            return self.getToken(MCParser.RQB, 0)

        def getRuleIndex(self):
            return MCParser.RULE_paraDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParaDecl" ):
                return visitor.visitParaDecl(self)
            else:
                return visitor.visitChildren(self)




    def paraDecl(self):

        localctx = MCParser.ParaDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_paraDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.primitivetype()
            self.state = 127
            self.match(MCParser.ID)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MCParser.LQB:
                self.state = 128
                self.match(MCParser.LQB)
                self.state = 129
                self.match(MCParser.RQB)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockstmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(MCParser.LP, 0)

        def RP(self):
            return self.getToken(MCParser.RP, 0)

        def var_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.Var_stmtContext)
            else:
                return self.getTypedRuleContext(MCParser.Var_stmtContext,i)


        def getRuleIndex(self):
            return MCParser.RULE_blockstmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockstmt" ):
                return visitor.visitBlockstmt(self)
            else:
                return visitor.visitChildren(self)




    def blockstmt(self):

        localctx = MCParser.BlockstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_blockstmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(MCParser.LP)
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.INTLIT) | (1 << MCParser.Realit) | (1 << MCParser.Booleanlit) | (1 << MCParser.Stringlit) | (1 << MCParser.IF) | (1 << MCParser.CONTINUE) | (1 << MCParser.FOR) | (1 << MCParser.DO) | (1 << MCParser.BREAK) | (1 << MCParser.RETURN) | (1 << MCParser.LB) | (1 << MCParser.LP) | (1 << MCParser.SUB) | (1 << MCParser.NOT) | (1 << MCParser.INTTYPE) | (1 << MCParser.BOOLEANTYPE) | (1 << MCParser.FLOATTYPE) | (1 << MCParser.STRINGTYPE) | (1 << MCParser.ID))) != 0):
                self.state = 133
                self.var_stmt()
                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 139
            self.match(MCParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDeclare(self):
            return self.getTypedRuleContext(MCParser.VarDeclareContext,0)


        def stmt(self):
            return self.getTypedRuleContext(MCParser.StmtContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_var_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_stmt" ):
                return visitor.visitVar_stmt(self)
            else:
                return visitor.visitChildren(self)




    def var_stmt(self):

        localctx = MCParser.Var_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_var_stmt)
        try:
            self.state = 143
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCParser.INTTYPE, MCParser.BOOLEANTYPE, MCParser.FLOATTYPE, MCParser.STRINGTYPE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 141
                self.varDeclare()
                pass
            elif token in [MCParser.INTLIT, MCParser.Realit, MCParser.Booleanlit, MCParser.Stringlit, MCParser.IF, MCParser.CONTINUE, MCParser.FOR, MCParser.DO, MCParser.BREAK, MCParser.RETURN, MCParser.LB, MCParser.LP, MCParser.SUB, MCParser.NOT, MCParser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 142
                self.stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifstmt(self):
            return self.getTypedRuleContext(MCParser.IfstmtContext,0)


        def forstmt(self):
            return self.getTypedRuleContext(MCParser.ForstmtContext,0)


        def do_whilestmt(self):
            return self.getTypedRuleContext(MCParser.Do_whilestmtContext,0)


        def breakstmt(self):
            return self.getTypedRuleContext(MCParser.BreakstmtContext,0)


        def continuestmt(self):
            return self.getTypedRuleContext(MCParser.ContinuestmtContext,0)


        def returnstmt(self):
            return self.getTypedRuleContext(MCParser.ReturnstmtContext,0)


        def blockstmt(self):
            return self.getTypedRuleContext(MCParser.BlockstmtContext,0)


        def exp(self):
            return self.getTypedRuleContext(MCParser.ExpContext,0)


        def SEMI(self):
            return self.getToken(MCParser.SEMI, 0)

        def getRuleIndex(self):
            return MCParser.RULE_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = MCParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_stmt)
        try:
            self.state = 155
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCParser.IF]:
                self.enterOuterAlt(localctx, 1)
                self.state = 145
                self.ifstmt()
                pass
            elif token in [MCParser.FOR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 146
                self.forstmt()
                pass
            elif token in [MCParser.DO]:
                self.enterOuterAlt(localctx, 3)
                self.state = 147
                self.do_whilestmt()
                pass
            elif token in [MCParser.BREAK]:
                self.enterOuterAlt(localctx, 4)
                self.state = 148
                self.breakstmt()
                pass
            elif token in [MCParser.CONTINUE]:
                self.enterOuterAlt(localctx, 5)
                self.state = 149
                self.continuestmt()
                pass
            elif token in [MCParser.RETURN]:
                self.enterOuterAlt(localctx, 6)
                self.state = 150
                self.returnstmt()
                pass
            elif token in [MCParser.LP]:
                self.enterOuterAlt(localctx, 7)
                self.state = 151
                self.blockstmt()
                pass
            elif token in [MCParser.INTLIT, MCParser.Realit, MCParser.Booleanlit, MCParser.Stringlit, MCParser.LB, MCParser.SUB, MCParser.NOT, MCParser.ID]:
                self.enterOuterAlt(localctx, 8)
                self.state = 152
                self.exp()
                self.state = 153
                self.match(MCParser.SEMI)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfstmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(MCParser.IF, 0)

        def LB(self):
            return self.getToken(MCParser.LB, 0)

        def exp(self):
            return self.getTypedRuleContext(MCParser.ExpContext,0)


        def RB(self):
            return self.getToken(MCParser.RB, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.StmtContext)
            else:
                return self.getTypedRuleContext(MCParser.StmtContext,i)


        def ELSE(self):
            return self.getToken(MCParser.ELSE, 0)

        def getRuleIndex(self):
            return MCParser.RULE_ifstmt
